--- a/aluraflix/style.css
+++ b/aluraflix/style.css
@@ -9,10 +9,16 @@ body {
   }
   
   #container-input {
-    
     text-align: center;
     padding: 20px;
-     
+    color: white;
+    font-size: 18px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
+    
+   
   }
 
   .btn-add {
